Added missing ! symbol

--- a/contacto.html
+++ b/contacto.html
@@ -14,7 +14,7 @@
             <!-- BARRA DE NAVEGACION -->
             <nav class="nav-bar">
                 <div class="nav-logo">
-                    <img src="imagenes/logo-primary.png" alt="Logo de la Empresa" class="imgfluid">
+                    <img src="imagenes/logo-primary.png" alt="Logo de la Empresa!" class="imgfluid">
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-menu-item"><a class="nav-menu-link" href="index.html">Me</a></li>
